<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:background="@android:color/black"
    android:minHeight="@dimen/list_item_height">

    <ImageView
        android:id="@+id/song_image"
        android:layout_width="@dimen/list_item_height"
        android:layout_height="@dimen/list_item_height"
        android:src="@mipmap/ic_launcher" />

    <RelativeLayout
        android:id="@+id/text_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/song_image"
        android:paddingLeft="@dimen/song_item_padding">

        <TextView
            android:id="@+id/song_name_list_item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/half_height"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:text="@string/song_item_artist_string" />

        <TextView
            android:id="@+id/song_title_list_item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/half_height"
            android:layout_below="@id/song_name_list_item"
            android:layout_weight="1"
            android:gravity="top"
            android:textColor="@android:color/white"
            tools:text="@string/song_item_track_string" />
    </RelativeLayout>

    <ImageView
        android:layout_width="@dimen/image_dimen"
        android:layout_height="@dimen/image_dimen"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/song_item_padding"
        android:contentDescription="@string/content_desc_string"
        android:src="@drawable/ic_play_arrow_white_reg_24dp" />
</RelativeLayout>